--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,26 @@
 
 }
 
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+
+}
+
+.section-heading h2{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 30px;
+}
+
+.section-heading p{
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    color: #757575;
+}
+
 /*   main styles  */
 header{
     background-color: #FFF8F3;
@@ -100,4 +120,35 @@ nav .menu a{
     max-width: 584px;
     vertical-align: middle;
     /*image er niche akta halka gap thake browser page a, sheta baad dite verticle align middle kora hoise*/
+}
+
+
+#about{
+    padding-top: 130px;
+}
+
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+
+}
+
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around; /*charidike ektu jayga rekhe nijeder modhe spaced hoye boshbe*/
+}
+
+.about-info .info-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+
+.about-info .info-card h4{
+    font-size: 20px;
+    line-height: 30px;
 }
