--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,6 +36,7 @@
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 
 }
 
@@ -151,4 +152,52 @@ nav .menu a{
 .about-info .info-card h4{
     font-size: 20px;
     line-height: 30px;
+}
+
+#skills{
+    padding-top: 130px;
+}
+
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    
+}
+
+.skills-container .section-heading p{
+    margin-bottom: 50px;
+}
+
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-box .skill-card{
+    border: 1px solid red; /*to better understand the border and paddings*/
+    padding: 30px;
+    max-width: 267px;
+
+    /*the design also has drop shadow for skill-cards*/
+    box-shadow: 0px 6px 50px 0 #00000023;
+    /*x-axis, y-axis, blur, spread, color*/
+}
+
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+
+.skill-card h3{
+    font-size: 20px;
+    color: #181818;
+    /* font-weight: bold; h3 use kora, so already bold e ache*/
+    margin-bottom: 20px;
+}
+
+.skill-card p{
+    font-size: 16px;
+    color: #757575;
+    line-height: 28px;
 }
